--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -95,7 +95,6 @@ button:hover{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 15px;
   }
   
@@ -142,6 +141,10 @@ button:hover{
     font-size: 18px;
   }
 
+  .error{
+    color: red;
+  }
+
 
   
   /* responsive design */
@@ -174,7 +177,7 @@ button:hover{
   }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .form {
     max-width: 90%; }
   .cards-container {
@@ -183,7 +186,7 @@ button:hover{
 
   .card {
     max-width: 100%; 
-    margin-left: 100px; 
+    /* margin-left: 100px;  */
   }
 }
  
