--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 .card-generator{
     display: flex;
@@ -78,7 +79,7 @@ button:hover{
   
   .product-section > h2 {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-left: 11%;
     color: #393E46;
   }
@@ -94,25 +95,33 @@ button:hover{
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 50px;
   }
   
 .card {
     border: 1px solid #ccc;
-    padding: 25px;
     text-align: center;
-    width: 280px;
-    height: 320px;
+    width: 300px;
+    height: auto;
     box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     background-color: #96B6C5;
+    overflow: hidden;
   }
   
   .card img {
-    max-width: 80%;
-    
+    max-width: 100%;
+    overflow: hidden;
+    border-radius: 5px;
+  }
+  
+  .card:hover{
+    scale: 1.05;
+    transition: all;
+    transition-duration: 2ms;
   }
   .card-details {
     padding: 10px;
@@ -124,7 +133,8 @@ button:hover{
   }
   
   .card p {
-    margin: 5px 0;
+    margin: 10px 0;
+    color: #393E46;
   }
   span{
     display: block;
@@ -132,6 +142,28 @@ button:hover{
     font-weight: bold;
     margin-top: 10px;
     color: #E55604;
+  }
+
+  .card-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    margin-top: 10px;
+    overflow: hidden;
+  }
+  
+  .card-buttons button {
+    padding: 8px 16px;
+    /* margin-right: 10px; */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .card-buttons button:hover {
+    background-color: #ddd;
+    color: black;
   }
 
   .footer{
